# solid-chat

./: README.md  down.sh  up.sh
admin/: index.html  package-lock.json  package.json  vite.config.ts
admin/src/: App.tsx
admin/src/chat/: chat.client.ts  chat.ts  chat_pb.js
admin/src/commands/: index.ts  tenants.ts
admin/src/components/: MainMenu.tsx  Modal.tsx  Notification.tsx  table.tsx
admin/src/lib/: Notifications.tsx  transport.ts
chat-proto/: chat.proto
chatter-admin/: package-lock.json  package.json
chatter-admin/src/: App.tsx  index.scss  index.tsx
chatter-client/: package-lock.json  package.json  vite.config.ts
chatter-client-old/: index.html
chatter-client/src/: App.tsx
chatter-server/: .env  Cargo.toml  build.rs
chatter-server/migrations/2022-12-19-195818_create_tenants/: down.sql  up.sql
chatter-server/migrations/2022-12-19-215142_add_default_tenant/: down.sql  up.sql
chatter-server/migrations/2022-12-27-094124_create_users/: down.sql  up.sql
chatter-server/migrations/2023-01-09-082916_add_root_user/: down.sql  up.sql
chatter-server/src/: errors.rs  main.rs  schema.rs
chatter-server/src/commands/: mod.rs  tenants.rs  users.rs
chatter-server/src/models/: mod.rs  session.rs  tenant.rs  user.rs
chatter-server/src/services/: authentication.rs  injection_middleware.rs  mod.rs  tenants.rs  users_admin.rs
data/: README.md
satter/: package-lock.json  package.json
satter/src/: index.sass  index.tsx
serv/: Cargo.toml  build.rs
serv/src/: errors.rs  main.rs  schema.rs
ssl/: README.md  cert.pem  key.pem
(+63 files in other folders)
