[package]
name = "chatter-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
diesel = {version = "2.0.2", features = ["postgres"]}
dotenvy = "0.15.6"
http = "0.2.8"
prost = "0.11.0"
prost-types = "0.11.1"
opentelemetry = {version="0.18.0", default-features=false, features=["trace"]}
opentelemetry-jaeger = "0.17.0"
thiserror = "1.0.38"
tracing = "0.1.37"
tracing-attributes = "0.1.23"
tracing-core = "0.1.30"
tracing-opentelemetry = "0.18.0"
tracing-subscriber = {version="0.3.16", features = ["json", "env-filter"]}
tonic = {version = "0.8.2", features = ["tls"]}
tonic-web = "0.5.0"
tokio = {version = "1.23.0", features = ["full"]}
tokio-stream = "0.1.11"
tower-http = {version = "0.3.5", features = ["cors"]}

[build-dependencies]
tonic-build = "0.8.2"